syntax = "proto3";

option java_multiple_files = false;
option java_package = "brianbig.gen";
option java_outer_classname = "WeatherStream";
option objc_class_prefix = "HLW";

package brianbig;

service WeatherStreamService {
  rpc getInfoOnce (WeatherRequest) returns (WeatherResponse) {}
  rpc getInfoContinuously (WeatherRequest) returns (stream WeatherResponse) {}
}

message WeatherRequest {
  int32 streamLimit = 1;
}
message WeatherResponse {
  string city = 1;
  string info = 2;
}